[package]
name = "card"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
open = "5.0.0"
reqwest = { version = "0.11.18", features = ["json"] }
rpassword = "7.2.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
structopt = "0.3.26"
tokio = { version = "1.31.0", features = ["full"] }
